<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flSplash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp" >

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/image_title" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_title"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:layout_marginTop="20dip"
        android:textStyle="bold"
        android:textSize="18sp" />
    
      <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_alignParentRight="true"
        android:textColor="@color/holo_blue_dark"
        android:layout_marginRight="30dip"
        android:textSize="14sp"
        />

    <!-- <TextView -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:layout_marginBottom="2dip" -->
    <!-- android:text="@string/about_note" -->
    <!-- android:textSize="18sp" -->
    <!-- /> -->

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="60dip"
        android:text="@string/about_update" />
    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_update"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="10dip"
        android:text="@string/about_share" />

</RelativeLayout>